--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
   },
   "dependencies": {
     "@mapbox/react-native-mapbox-gl": "^6.1.3",
+    "prop-types": "^15.6.2",
     "react": "16.4.1",
-    "react-native": "0.56.0"
+    "react-native": "0.55.4"
   },
   "devDependencies": {
+    "@babel/core": "7.0.0-beta.47",
+    "babel-core": "7.0.0-bridge.0",
     "babel-jest": "23.4.2",
-    "babel-preset-react-native": "^5",
+    "babel-preset-react-native": "^4.0.0",
+    "eslint": "^3.17.0",
     "jest": "23.5.0",
     "react-test-renderer": "16.4.1"
   },
